# edd

./: .gitignore  Cargo.toml  README.md
src/: constants.rs  main.rs  manager.rs  parser.rs  resolver.rs  types.rs  ui.rs  utils.rs
