[package]
name = "edd"
version = "0.1.0"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml"
]

[dependencies]
crossterm = "0.27.0"
git2 = "0.18.1"
regex = "1.10.2"
tokio = { version = "1.34.0", features = ["full"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

